Fixed background on homepage, fixed alignment, fixed padding. Needs text changed and possibly more color??

--- a/frontend/src/css/homepage.css
+++ b/frontend/src/css/homepage.css
@@ -1,30 +1,21 @@
-body {
-    margin-top: 200px;
-    /* min-height: 100vh; */
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-    justify-content: center;
-    /* font-size: calc(10px + 2vmin); */
-    /* color: white; */
-    background-image: url("../graphics/AProj-BG.png")
-    /* backgroundRepeat: 'no-repeat', width: 'auto', height: 'auto', color: `#c3c3c3` } */
-  }
-
+  /* Area that contains the grid */
   .home-menu-box {
-    /* height: 200vh; */
-    /* width: 100vh; */
-    align-items: center;
-    justify-content: center;
-    color: black;
+    padding-top: 30vh;
+    margin-right: 30vw;
+    margin-left: 30vw;
   }
 
+  /* Each item in the grid */
   .home-grid-item {
-    /* min-height: 20vh; */
-    /* min-width: 60vh; */
+    padding: 30px;
     text-align: center;
+  }
+  
+  /* Background of page */
+  .home-bg {
+    background: url(../graphics/AProj-BG.png) no-repeat center center fixed;
+    height: 100vh;
     align-items: center;
-    justify-content: center;
-    color: black;
+    align-content: center;
   }
   
